@@ -6,7 +6,6 @@
  */
 package org.elasticsearch.xpack.esql.querydsl.query;
 
-import org.elasticsearch.core.Booleans;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.xpack.esql.core.querydsl.query.Query;
 import org.elasticsearch.xpack.esql.core.tree.Source;
@@ -18,28 +17,27 @@ import java.util.Objects;
 import java.util.function.BiConsumer;
 
 import static java.util.Map.entry;
+import static org.elasticsearch.index.query.AbstractQueryBuilder.BOOST_FIELD;
+import static org.elasticsearch.xpack.kql.query.KqlQueryBuilder.CASE_INSENSITIVE_FIELD;
+import static org.elasticsearch.xpack.kql.query.KqlQueryBuilder.DEFAULT_FIELD_FIELD;
+import static org.elasticsearch.xpack.kql.query.KqlQueryBuilder.TIME_ZONE_FIELD;
 
 public class KqlQuery extends Query {
 
-    private static final Map<String, BiConsumer<KqlQueryBuilder, String>> BUILDER_APPLIERS = Map.ofEntries(
-        entry(KqlQueryBuilder.TIME_ZONE_FIELD.getPreferredName(), KqlQueryBuilder::timeZone),
-        entry(KqlQueryBuilder.DEFAULT_FIELD_FIELD.getPreferredName(), KqlQueryBuilder::defaultField),
-        entry(KqlQueryBuilder.CASE_INSENSITIVE_FIELD.getPreferredName(), (qb, s) -> qb.caseInsensitive(Booleans.parseBoolean(s)))
+    private static final Map<String, BiConsumer<KqlQueryBuilder, Object>> BUILDER_APPLIERS = Map.ofEntries(
+        entry(TIME_ZONE_FIELD.getPreferredName(), (qb, v) -> qb.timeZone((String) v)),
+        entry(DEFAULT_FIELD_FIELD.getPreferredName(), (qb, v) -> qb.defaultField((String) v)),
+        entry(CASE_INSENSITIVE_FIELD.getPreferredName(), (qb, v) -> qb.caseInsensitive((Boolean) v)),
+        entry(BOOST_FIELD.getPreferredName(), (qb, v) -> qb.boost(((Number) v).floatValue()))
     );
 
     private final String query;
+    private final Map<String, Object> options;
 
-    private final Map<String, String> options;
-
-    // dedicated constructor for QueryTranslator
-    public KqlQuery(Source source, String query) {
-        this(source, query, null);
-    }
-
-    public KqlQuery(Source source, String query, Map<String, String> options) {
+    public KqlQuery(Source source, String query, Map<String, Object> options) {
         super(source);
         this.query = query;
-        this.options = options == null ? Collections.emptyMap() : options;
+        this.options = options == null ? Collections.emptyMap() : Map.copyOf(options);
     }
 
     @Override
@@ -55,12 +53,27 @@ public class KqlQuery extends Query {
         return queryBuilder;
     }
 
+    @Override
+    public boolean containsPlan() {
+        return false;
+    }
+
     public String query() {
         return query;
     }
 
-    public Map<String, String> options() {
+    public Map<String, Object> options() {
         return options;
+    }
+
+    @Override
+    public boolean scorable() {
+        return true;
+    }
+
+    @Override
+    protected String innerToString() {
+        return query;
     }
 
     @Override
@@ -73,23 +86,7 @@ public class KqlQuery extends Query {
         if (false == super.equals(obj)) {
             return false;
         }
-
         KqlQuery other = (KqlQuery) obj;
         return Objects.equals(query, other.query) && Objects.equals(options, other.options);
-    }
-
-    @Override
-    protected String innerToString() {
-        return query;
-    }
-
-    @Override
-    public boolean scorable() {
-        return true;
-    }
-
-    @Override
-    public boolean containsPlan() {
-        return false;
     }
 }
